fixed no images issue

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   
               </p>
             <figure>
-              <img src="./assets/images/profilepic.jpg" alt="This is me!"/>
+              <img src=".\assets\images\profilepic.jpg" alt="This is me!"/>
             </figure>
         
       </section>
