trying to fix live site for not reading images

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="resetsheet" type="text/css" href="./assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="resetsheet" type="text/css" href="./Assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css">
     <title>Bryan Nguyen Portfolio Website</title>
   </head>
 
   <body>
     <header>
-      <img src="./assets/images/myicon.png" alt="Company Icon" />
+      <img src="./Assets/images/myicon.png" alt="Company Icon" />
       <h1>Bryan Nguyen Portfolio Site</h1>
         <nav>
           <ul>
@@ -49,7 +49,7 @@
                   
               </p>
             <figure>
-              <img src=".\assets\images\profilepic.jpg" alt="This is me!"/>
+              <img src="./Assets/images/profilepic.jpg" alt="This is me!"/>
             </figure>
         
       </section>
@@ -97,10 +97,10 @@
                 <h4>More Coming Soon!</h4>
               </p>
             <figure class="flex-img">
-              <img src="./assets/images/horiseonproject1.png" alt="Screenshot of my most recent project"/>
+              <img src="./Assets/images/horiseonproject1.png" alt="Screenshot of my most recent project"/>
             </figure>
             <figure class="flex-img">
-              <img src="./assets/images/horiseonproject2.png" alt="Screenshot of my most recent project"/>
+              <img src="./Assets/images/horiseonproject2.png" alt="Screenshot of my most recent project"/>
             </figure>
       </section>
 
