added photos and zoom features for portfolio and links

--- a/index.html
+++ b/index.html
@@ -74,23 +74,29 @@
       <section id="links-content" >
         
           <h2>links</h2>
-            <h3> 
               <nav>
                 <ul>
+                  <figure class = "links" id="links-card">
                   <li>
-                    <br>
-                  <br>
-                    <a href="https://github.com/bryannguyen9">github profile</a>
+                    <a href="https://github.com/bryannguyen9">github profile</a><br>
+                    <a href="https://github.com/bryannguyen9"><img src="./Assets/images/myicon.png"></a>
                   </li>
-                  <br>
+                </figure>
+
+                <figure class = "links" id="links-card">
                   <li>
-                    <a href="https://www.linkedin.com/in/bryannguyen9/">linked-in profile</a>
+                    <a href="https://www.linkedin.com/in/bryannguyen9/">linked-in profile</a><br>
+                    <a href="https://www.linkedin.com/in/bryannguyen9/"><img src="./Assets/images/linkedinicon.png"></a>
                   </li>
-                  <br>
+                  </figure>
+
+                  <figure class = "links" id="links-card">
                   <li>
-                    <a href="https://github.com/">github.com</a>
+                    <a href="https://github.com/">github.com</a><br>
+                    <a href="https://github.com/"><img src="./Assets/images/githublogo.png"></a>
                   </li>
-                </ul>
+                </figure>
+              </ul>
               </nav>
             </h3>
       </section>
