added cheerio to portfolio section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
       <section id="portfolio-content" >
       
         <h2>portfolio</h2>
+        <figure class = "portfolio" id="portfolio-card">
+          <h3>Cheerio</h3>
+            <p> 
+              Cheerio is a web application built by myself, David Vo, and Kenneth Cruz. <br>
+              We came together understanding each others strengths and weaknesses.  <br>
+              Cheerio allows users to find meaningful and inspiration quotes based <br>
+              on how they are feeling and their mood at that current moment along <br>
+              with a backdrop image associated with those moods.
+            </p>
+          <figure class="flex-img">
+            <a href="https://daevidvo.github.io/Cheerio/"><img src="./Assets/images/main.png" alt="Screenshot of my most recent projects"/></a>
+          </figure>
+        </figure>
+
           <figure class = "portfolio" id="portfolio-card">          
                 <h3> Horiseon Landing Page</h3>
                   <p> 
