updated portfolio page

--- a/index.html
+++ b/index.html
@@ -119,16 +119,23 @@
         </figure>
 
           <figure class = "portfolio" id="portfolio-card">          
-                <h3> Horiseon Landing Page</h3>
+                <h3>MeloRE:</h3>
                   <p> 
                     This is one of my first projects where I refactored code in order <br>
-                    to make the website compliant with current accessibility terms and <br>
-                    conditions. I cleaned up code behind the scenes and added semantic <br>
-                    HTML elements in order to make the overall website more accessible. <br>
+                    This was a full-stack application that was built with a team of <br>
+                    friends. MeloRE:'s concept was to create a music learning atmosphere. <br>
+                    With the help of multiple javascript packages such as chartJS, nodeJS, <br>
+                    as well as the Spotify API and Google Natural Language Model we were <br>
+                    able to create a full-stack application that takes in the users <br>
+                    spotify song and playlist information and convert that into statistical <br>
+                    data for users to enjoy and see how their songs compare in terms of <br>
+                    tempo, danceability, etc. Overall MeloRE: was a fun and bright <br>
+                    project that came out extremely fulfilling using many different  <br>
+                    resources in order to bring MeloRE: to the public. <br>
                   
                   </p>
                 <figure class="flex-img">
-                  <a href="https://bryannguyen9.github.io/3-20-23-challenge/"><img src="./Assets/images/horiseonproject1.png" alt="Screenshot of my most recent projects"/></a>
+                  <a href="https://melore.herokuapp.com/"><img src="./Assets/images/melore.png" alt="Screenshot of my most recent projects"/></a>
                 </figure>
           </figure>
           
